# branch-storm

./: .gitignore  __init__.py  pyproject.toml
_src/: branch.py  initialization_core.py  operation.py
_src/default/: assign_results.py  parallelism.py  stubs.py
_src/launch_operations/: data_parsing.py  rw_inst_updater.py
_src/utils/: common.py
src/: branch.py  constants.py  dataclasses.py  one_op_processor.py  operation.py  operation_branch.py  type_containers.py
src/branch_storm/: __init__.py  branch.py  constants.py  initialization_core.py  operation.py  type_containers.py
src/branch_storm/default/: assign_results.py  parallelism.py  rw_classes.py
src/branch_storm/launch_operations/: data_parsing.py  rw_inst_updater.py
src/branch_storm/utils/: common.py  formatters.py
src/default/: assign_results.py  parallelism.py  rw_classes.py
src/launch_operations/: args_distributor.py  data_parsing.py  errors.py  launch_utils.py  launcher.py  options_appliers.py  rw_inst_updater.py
src/processor/: initialization.py  one_op_processor.py
src/utils/: common.py
tests/: test_parallel_run.py  test_util.py
tests/launch/: test_assign.py  test_check_type_strategy.py  test_distribution.py  test_finish_execution.py  test_incorrect_options.py  test_result_parser.py  test_run.py  test_rw_inst_updater.py
tests/processor/: test_classes.py  test_functions.py  test_initialization.py  test_rw_classes.py
