[tool.poetry]
name = "branch_storm"
version = "0.1.0"

description = "branch_storm package"
authors = ["Dmitrii Zhitin <3271707@gmail.com>"]

packages = [{ include = "_src" }]

[tool.poetry.dependencies]
python = ">=3.9"
typeguard = "4.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
pytest-cov = "~2.11.1"

[tool.pytest.ini_options]
norecursedirs = [
    "dist",
    "build",
    "docs",
    ".git",
    "__pycache__"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
